fix: modal overflow

--- a/resources/scss/components/Modal/_modal.scss
+++ b/resources/scss/components/Modal/_modal.scss
@@ -8,6 +8,10 @@
   z-index: 1000;
 }
 
+.modal__overflow-wrapper {
+	position: relative;
+}
+
 .modal__main {
 	color: var(--secondary);
 
@@ -18,15 +22,15 @@
 
 	background-color: var(--primary);
 
-  position: sticky;
-  z-index: 5000;
+	overflow-y: auto;
+	overflow-x: hidden;
 
 	display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
-	padding: space(4);
+	padding: space(3);
   margin: space(2);
 
 	& header {
