--- a/resources/scss/components/Modal/_profile-modal.scss
+++ b/resources/scss/components/Modal/_profile-modal.scss
@@ -11,6 +11,11 @@
 
 	.auth-page__form-group {
 		width: 100%;
+		position: static;
+	}
+
+	label {
+		position: static;
 	}
 }
 
